--- a/public/css/create.scss
+++ b/public/css/create.scss
@@ -1,4 +1,5 @@
 body{
+    display: flex;
     margin: 0px;
     font-family: 'Montserrat', sans-serif;
 }
@@ -9,7 +10,8 @@ h1{
 
 form{
     display: flex;
-    flex-direction: column;
+
+    flex-direction: row;
 }
 label{
     margin-top: 10px;
