--- a/public/css/create.scss
+++ b/public/css/create.scss
@@ -5,15 +5,11 @@ body{
 }
 
 h1{
+    margin-top: 50px;
     text-align: center;
 }
 
 form{
-    display: flex;
-    flex-direction: column;
-}
-
-.bulle {
     display: flex;
     flex-direction: column;
 }
@@ -24,6 +20,7 @@ label{
 
 
 }
+
 #name, #adresse, #type {
     border: none;
     outline: none;
@@ -32,6 +29,11 @@ label{
     background: #f7f4f4;
     box-shadow: inset 5px 5px 10px #e3e0e0, 
                 inset -5px -5px 10px #ffffff;
+}
+
+.bulle {
+    display: flex;
+    flex-direction: column;
 }
 
 .logo {
