--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -23,6 +23,7 @@ h1{
             }
 
             .nom {
+                color: black;
             }
             .edit-delete {
                 display: flex;
