--- a/public/css/create.scss
+++ b/public/css/create.scss
@@ -21,7 +21,7 @@ label{
 
 }
 
-#name, #adresse, #type {
+#name, #firstname, #adresse, #type, #number, #email_verified_at, #email, #entreprise, #contact {
     border: none;
     outline: none;
     height: 40px;
