--- a/public/css/show.scss
+++ b/public/css/show.scss
@@ -6,9 +6,39 @@ body{
     align-items: center;
 }
 
-div{
-    width: 60%;
+.container {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .adresse {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        height: 300px;
+        width: 300px;
+        border-radius: 20px;
+        background: linear-gradient(145deg, #e6e6e6, #ffffff);
+        box-shadow:  21px 21px 43px #e0e0e0, 
+                     -21px -21px 43px #ffffff;
+    }
+
+    .retour {
+        margin: 10%;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        padding: 20px;
+        border-radius: 15px;
+        background: linear-gradient(145deg, #e6e6e6, #ffffff);
+        box-shadow:  21px 21px 43px #e0e0e0, 
+                     -21px -21px 43px #ffffff;
+            
+            a {
+                text-transform: uppercase;
+            }
+    }
 }
