--- a/public/css/create.scss
+++ b/public/css/create.scss
@@ -57,17 +57,43 @@ label{
         display: block;
     }
 }
-#valider{
-    height: 40px;
-    outline: none;
-    border: none;
-    margin: 20px;
-    width: 100px;
-    align-self: center;
-    border-radius: 9px;
-    background: #f7f4f4;
-    box-shadow:  8px 8px 20px #dcd9d9, 
-             -8px -8px 20px #ffffff;
+.ajout {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    #valider{
+        height: 40px;
+        outline: none;
+        border: none;
+        margin: 20px;
+        width: 100px;
+        align-self: center;
+        border-radius: 9px;
+        background: linear-gradient(145deg, #e6e6e6, #ffffff);
+        box-shadow:  21px 21px 43px #e0e0e0, 
+                     -21px -21px 43px #ffffff;
+    }
+    
+    .retour {
+        margin: 20px;
+        height: 40px;
+        width: 100px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        border: none;
+        outline: none;
+        ;
+        border-radius: 9px;
+        background: linear-gradient(145deg, #e6e6e6, #ffffff);
+        box-shadow:  21px 21px 43px #e0e0e0, 
+                     -21px -21px 43px #ffffff;
+            
+            a {
+                color: black;
+            }
+    }
 }
 
 /*----------------------------------------------------------------------------------------------
