--- a/public/css/show.scss
+++ b/public/css/show.scss
@@ -11,6 +11,9 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    h1{
+        margin-bottom: 100px;
+    }
     .image {
         margin-bottom: 10%;
         padding: 10px;
